Major Refactor: Fixed CORS, updated Database Schema, and modularized Dashboard UI